tests/typing/good/testfile-block-2.scala

class C() { var x : Unit = {} }
object Main { def main(args: Array[String]) { } }
