tests/typing/bad/testfile-return-1.scala
class C { var x = return }
object Main { def main(args: Array[String]) { } }
